styles.css
/* Body styles */
body {
  font-family: "Averia Serif Libre", serif;
  font-weight: 300;
  font-style: normal;
  padding: 0;
  color: white;
  background-color: black; /* Light background color */
}

text{
  font-family: "Averia Serif Libre", serif;
  font-weight: 300;
  font-style: normal;
}

svg {
  margin: 1em;
  padding: 1em;
  width: 100%;
  height: auto;
}

/* Heading styles */
h2, h3 {
  font-family: "Rubik", sans-serif;
  font-optical-sizing: auto;
  font-weight: 200;
  font-style: normal;
  color: white; /* Dark color for headings */
}

/* Container styles */
.container {
  max-width: 960px;
  border: 1px solid gray;
  padding: 20px;
  background-color: #1f2124;
  box-shadow: 0 0 30px #1f2124;
  border-radius: 5px;
}

.error-message {
  max-width: 960px;
  padding: 20px;
}

/* Form styles */
.form-group {
  margin: 1em;
  text-align: left;
  font-family: "Averia Serif Libre", serif;
  font-weight: 300;
  font-style: normal;
}

label {
  display: block;
  font-weight: light;
  margin-bottom: 5px;
}

h1{
  font-family: "Averia Serif Libre", serif;
  font-weight: 300;
  font-style: normal;
  text-align:center;
  font-style: normal;
  font-size: 4em;
}

#end-p {
  font-family: "Averia Serif Libre", serif;
  font-weight: 300;
  font-style: normal;
  text-align:center;
  font-style: normal;
  font-size: 2em;
}

input[type="text"], textarea {
  width: 100%;
  padding: 10px;
  font-size: 1em;
  margin-top: .25em;
  margin-bottom: 1em;
  border: 1px solid #ccc;
  border-radius: 3px;
  box-sizing: border-box;
  font-family: "Averia Serif Libre", serif;
  font-weight: 300;
  font-style: normal;
}

button {
  display: inline-block;
  font-family: "Averia Serif Libre", serif;
  font-weight: 300;
  font-style: normal;
  padding: 0.5em;
  margin-top: 1em;
  font-size: 1em;
  font-weight: lightest;
  color: white;
  background-color: black; /* Primary button color */
  border: 1px solid whitesmoke;
  border-radius: 5px;
  cursor: pointer;
}

button:hover {
  background-color: white;
  color: black;
  border: 1px solid black;
}

div {
  margin: 0 auto;
  width: 80%;
  padding: 20px;
  font-size: 1.2em;
  line-height: 1.6em;
}

.steps {
  margin-left: 0;
  margin-right: 0;
  display: flex;
  flex-direction: column; /* Arrange steps vertically */
  gap: 10px; /* Vertical gap between steps */
  width: 40%;
}

/* CSS for fading in and out .step elements */
.step {
  opacity: 0; /* Initially hide all steps */
  transition: opacity 2s ease; /* Smooth transition for opacity changes */
}
.step.active {
  opacity: 1; /* Show active step */
}



#chart {
  width: 100%;
  height: auto;
  position: sticky;
  top: 0px;
  left: 0px;
}

#chart-0-container {
  flex: 1; /* Take up remaining vertical space */
  position: sticky;
  top: 0px;
  left: 0px;
}

.step {
  margin-top: 50px;
  min-height: 600px;
}

/* Section styles */
section {
  display: flex; /* Use flexbox to manage children */
  flex-direction: row;
  justify-content: space-between; /* Ensure space between divs */
  align-items: flex-start; /* Align items at the top */
}

/* Responsive Adjustments */
@media (max-width: 768px) {
  section {
      flex-direction: column; /* Stack elements vertically */
      align-items: center;
  }

  .steps {
      width: 100%; /* Ensure steps take full width on mobile */
  }

  #chart-0-container {
      margin-bottom: 20px; /* Add some spacing between chart and text */
  }
}

